# spaogame_DRF

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_GUIDE.md  COMPARISON_DRFDJANGO.md  Dockerfile  Makefile  POSTMAN_SETUP.md  PROJECT_OVERVIEW.md  README.md  SPAOGAME_API_Cache_Tests.postman_collection.json  SPAOGAME_API_Complete.postman_collection.json  SPAOGAME_Development.postman_environment.json  db.sqlite3  docker-compose.yml  docker-entrypoint.sh  main.py  plan.md  pyproject.toml  pytest.ini  test_list.md
.github/workflows/: ci.yml
apps/: conftest.py
apps/core/: cache_utils.py  exceptions.py  models.py  permissions.py
apps/orders/: apps.py  models.py  serializers.py  services.py  urls.py  views.py  wishlist_urls.py
apps/orders/migrations/: 0001_initial.py  0002_add_detailed_product_to_cart.py  0003_wishlist.py  0004_cartitem_exactly_one_product_set_and_more.py
apps/orders/tests/: conftest.py  test_cart.py  test_wishlist.py
apps/postings/: apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/postings/migrations/: 0001_initial.py
apps/postings/tests/: conftest.py  test_comments.py  test_postings.py  test_postings_crud.py
apps/products/: apps.py  models.py  permissions.py  selectors.py  serializers.py  signals.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  0002_category.py  0003_product.py  0004_add_detailed_domain.py
apps/products/tests/: conftest.py  test_categories.py  test_detailed_products.py  test_menus.py  test_products.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_date_joined_and_more.py  0003_add_extended_fields.py
apps/users/tests/: conftest.py  test_genders.py  test_login.py  test_profile.py  test_signup.py
config/: settings.py  urls.py
